<resources>
    <string name="app_name">CHECKERS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_game">Game</string>
    <string name="menu_about">About</string>
    <string name="game_option">Game Option</string>
    <string name="menu_player">Change computer to player</string>
    <string name="menu_computer">Change player to computer</string>
    <string name="menu_replay">Reset game</string>
    <string name="menu_new_game">New game</string>
    <string name="btn_player">Play with Friend</string>
    <string name="btn_computer">Play with Computer</string>
    <string name="field">Field</string>
    <string name="board">Board</string>
    <string name="dialog_home">HomeDialogFragment</string>
    <string name="dialog_game">GameDialogFragment</string>
    <string name="rules">Rules</string>
    <string name="rules_info">
        The game is played  on an 8×8 checkerboard. \n\n
        Every player starts the game with 12 pieces set on dark squares. \n\n
        The player with white pieces makes the first move and then the players alternate turns.\n\n
        The player, who do not have pieces remaining on the board or
        cannot move any pieces due to being blocked, loses the game. If any player cannot remove
        all pieces of the opponent or block them (every player moves 15 times without capturing
        opponent\'s piece), the game ended in a draw. \n\n
        Normal pieces (Man) can only move one step diagonally forward.
        Whenever a Man has an opponent\'s piece adjacent to it and the square immediately
        beyond the opponent\'s piece is vacant, the opponent\'s piece can be captured.
        A piece is captured by jumping over it into the vacant square beyond and removing
        it from the board. The men can jump both forward and backward.\n\n
        The capturing the enemy pieces, when it is possible, is obligatory. \n\n
        In one turn player can capture a few enemy pieces using a single piece. \n\n
        Any piece that reaches the far edge of the board
        at the end of player\'s turn become a "King". \n\n
        Kings can move any distance along unblocked diagonals both forward and backward and
        may capture an opposing piece any distance away by jumping to any of the unoccupied squares
        immediately beyond it. \n\n
        When there are a few capturing possibility, the player must chose the one, which remove
        the greatest amount of opponent\'s pieces.
    </string>
    <string name="author">Authors</string>
    <string name="author_names">Michał Szczepaniak</string>
    <string name="Other">Other options</string>
    <string name="chose">I want to play as:</string>
    <string name="cancel">CANCEL</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="draw">DRAW</string>
    <string name="red_win">The RED pawns won</string>
    <string name="white_win">The WHITE pawns won</string>
    <string name="new_game">New Game</string>
    <string name="exit">EXIT</string>
    <string name="player">Player</string>
    <string name="computer">Computer</string>
    <string name="once_again">I want to play once again with:</string>
    <string name="tab">\\t</string>
</resources>
