<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_menu"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_play"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>




    <item
        android:title="@string/game_option"
        android:visible="false"
        android:id="@+id/nav_game_option">
        <menu>
            <item
                android:id="@+id/nav_new_game"
                android:icon="@drawable/ic_play"
                android:title="@string/menu_new_game" />
            <item
                android:id="@+id/nav_replay"
                android:icon="@drawable/ic_replay"
                android:title="@string/menu_replay" />
        </menu>
    </item>





</menu>


