<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pl.michalsz.checkers.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_home_alert"
            app:destination="@id/nav_home_alert"
            app:popUpTo="@+id/nav_home_alert"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_home_to_nav_game"
            app:destination="@id/nav_game"
            app:popUpTo="@+id/nav_game"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_game"
        android:name="pl.michalsz.checkers.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game">
        <argument
            android:name="white"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="red"
            android:defaultValue="true"
            app:argType="boolean" />
        <action
            android:id="@+id/action_nav_game_to_nav_game_alert"
            app:destination="@id/nav_game_alert" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="pl.michalsz.checkers.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <dialog
        android:id="@+id/nav_home_alert"
        android:name="pl.michalsz.checkers.ui.home.HomeDialogFragment"
        android:label="@string/dialog_home"
        tools:layout="@layout/fragment_dialog_home">
        <action
            android:id="@+id/action_nav_home_alert_to_nav_game"
            app:destination="@+id/nav_game"
            app:popUpTo="@+id/nav_game"
            app:popUpToInclusive="true" />
    </dialog>

    <dialog
        android:id="@+id/nav_game_alert"
        android:name="pl.michalsz.checkers.ui.game.GameDialogFragment"
        android:label="@string/dialog_game"
        tools:layout="@layout/fragment_dialog_game">
        <argument
            android:name="winner"
            android:defaultValue="0"
            app:argType="integer" />

        <action
            android:id="@+id/action_nav_game_alert_to_nav_home_alert"
            app:destination="@id/nav_home_alert" />
        <action
            android:id="@+id/action_nav_game_alert_to_nav_game"
            app:destination="@id/nav_game" />
    </dialog>


</navigation>